--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap');
 
-*,
 *:after,
-*:before{
+*:before {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0;
@@ -15,8 +15,8 @@
     outline-offset: 0;
 }
 
-a:hover{
-    color:var(--primary-color) !important;
+a:hover {
+    color: var(--primary-color) !important;
 }
 
 ul,
@@ -24,6 +24,7 @@ ol {
     margin: 0;
     padding: 0;
 }
+
 /* define */
 :root {
     --primary-color: #A82C48;
@@ -37,11 +38,11 @@ ol {
     --secondary-font: 'Quicksand', sans-serif;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-body{
+body {
     font-family: var(--primary-font);
     font-size: 100%;
     font-weight: 400;
@@ -51,10 +52,12 @@ body{
 ::-webkit-scrollbar {
     width: 0.625 rem
 }
-::-webkit-scrollbar-track{
+
+::-webkit-scrollbar-track {
     background: var(--white-color);
 }
-::-webkit-scrollbar-thumb{
+
+::-webkit-scrollbar-thumb {
     background: var(--primary-color);
 }
 
@@ -164,7 +167,7 @@ p {
 }
 
 /* Header Design  */
-.navigation-wrap{
+.navigation-wrap {
     position: fixed;
     width: 100%;
     left: 0;
@@ -172,43 +175,44 @@ p {
     transition: all 0.3s ease-out;
 }
 
-.navigation-wrap .nav-item{
+.navigation-wrap .nav-item {
     padding: 0 0.625rem;
     transition: all 200ms linear;
 }
 
-.navbar-toggler:focus{
+.navbar-toggler:focus {
     outline: unset;
     border: unset;
     box-shadow: none;
 }
 
-.nav-link{
+.nav-link {
     font-size: 0.9375rem;
     font-weight: 600;
     text-transform: capitalize;
     color: var(--primary-color);
     letter-spacing: 1px;
 }
-.navigation-wrap .main-btn{
+
+.navigation-wrap .main-btn {
     padding: 0.3125 1.4375;
     box-shadow: none;
     margin-left: 0.625rem;
 }
 
 /* Change navbar styling on scroll  */
-.navigation-wrap.scroll-on{
+.navigation-wrap.scroll-on {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     background: var(--white-color);
-    box-shadow: 0 0.125rem 1.75rem 0 rgb(0,0,0,0.09);
-    transition:all .15s ease-in-out 0s;
+    box-shadow: 0 0.125rem 1.75rem 0 rgb(0, 0, 0, 0.09);
+    transition: all .15s ease-in-out 0s;
 }
 
 /* top banner design  */
-.top-banner{
+.top-banner {
     width: 80%;
     background: url('../images/3333449.jpg') no-repeat right;
     background-size: 70%;
@@ -216,29 +220,384 @@ p {
 }
 
 /* Counter-Design */
-.counter-section{
+.counter-section {
     background-color: var(--primary-color);
     padding: 2.5rem 0;
 }
-.counter-section p{
+
+.counter-section p {
     color: var(--white-color);
     text-transform: uppercase;
 }
 
 /* footer section design  */
-.footer{
+.footer {
     background: var(--primary-color);
 }
-.footer .footer-link{
-    font-size:1rem;
+
+.footer .footer-link {
+    font-size: 1rem;
     color: var(--white-color);
     padding: 0 1.875rem;
 }
-.footer .footer-link:hover{
-    color:var(--white-color) !important
+
+.footer .footer-link:hover {
+    color: var(--white-color) !important
 }
-.footer a i{
+
+.footer a i {
     font-size: 1.5rem;
     color: var(--white-color);
-    padding:0 1rem;
+    padding: 0 1rem;
 }
+
+
+
+/* Cart design and responsive  */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Mulish', sans-serif;
+}
+
+:root {
+    --text-clr: #4f4f4f;
+}
+
+p {
+    color: #6c757d;
+}
+
+a {
+    text-decoration: none;
+    color: var(--text-clr);
+}
+
+a:hover {
+    text-decoration: none;
+    color: var(--text-clr);
+}
+
+h2 {
+    color: var(--text-clr);
+    font-size: 1.5rem;
+}
+
+.main_cart {
+    background: #fff;
+}
+
+.card {
+    border: none;
+}
+
+.product_img img {
+    min-width: 200px;
+    max-height: 200px;
+}
+
+.product_name {
+    color: var(--primary-color);
+    font-size: 1.4rem;
+    text-transform: capitalize;
+    font-weight: 500;
+}
+
+.card-title p {
+    font-size: 0.9rem;
+    font-weight: 500;
+}
+
+.remove-and-wish p {
+    font-size: 0.8rem;
+    margin-bottom: 0;
+}
+
+.price-money h3 {
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.set_quantity {
+    position: relative;
+}
+
+.set_quantity::after {
+    content: "(Note, 1 piece)";
+    width: auto;
+    height: auto;
+    text-align: center;
+    position: absolute;
+    bottom: -20px;
+    right: 1.5rem;
+    font-size: 0.8rem;
+}
+
+.page-link {
+    line-height: 16px;
+    width: 45px;
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #495057;
+}
+
+.page-item input {
+    line-height: 22px;
+    padding: 3px;
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.page-link:hover {
+    text-decoration: none;
+    color: #495057;
+    outline: none !important;
+}
+
+.page-link:focus {
+    box-shadow: none;
+}
+
+.price_indiv p {
+    font-size: 1.1rem;
+}
+
+.fa-heart:hover {
+    color: red;
+}
+
+
+
+/* Login page  */
+.image-container{
+    background: url('../images/delivery.jpg') center left no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+
+.form-block{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+
+.form-box h4 {
+    font-weight: bold;
+}
+
+.form-box .form-input {
+    position: relative;
+}
+
+.form-box .form-input input {
+    width: 100%;
+    height: 40px;
+    margin-bottom: 20px;    
+    box-sizing: border-box;
+    box-shadow: none;
+    border: 1px solid #ffe0da;
+    border-radius: 40px;
+    outline: none;
+    color: black;
+    background: transparent;   
+    padding-left: 40px;
+}
+
+.form-box .form-input span {
+    position: absolute;
+    top: 8px;
+    padding-left: 15px;
+    color: var(--primary-color);
+}
+
+.form-box .form-input input::placeholder {
+    color: black;
+    padding-left: 0px;
+}
+
+.form-box .form-input input:focus,
+.form-box .form-input input:valid {
+    border: 2px solid var(--primary-color);
+}
+
+.form-box .form-input input:focus::placeholder {
+    color: #454b69;
+}
+
+.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+  background-color: var(--primary-color) !important;
+  border:0px;
+}
+
+.form-box button[type="submit"] {
+    margin-top: 10px;
+    border: none;
+    cursor: pointer;
+    border-radius: 20px;
+    background: linear-gradient(45deg, var(--primary-color), var(--primary-color));
+    color: #fff;
+    font-weight: bold;
+    transition: 0.5s;
+}
+
+.form-box button[type="submit"]:hover {
+    background: linear-gradient(45deg, var(--primary-color), var(--primary-color));
+}
+
+.forget-link , .login-link , .register-link {
+    color: var(--primary-color);
+    font-weight: bold;
+}
+
+.forget-link:hover , .login-link:hover , .register-link:hover {
+    color: var(--primary-color);
+    text-decoration: none;
+}
+
+.form-box .btn-social {
+    color: white;
+    border: 0;
+}
+
+.form-box .btn-facebook {
+    background: #4866a8;
+}
+
+.form-box .btn-google {
+    background: #da3f34;
+}
+
+.form-box .btn-twitter {
+    background: #33ccff;
+}
+
+.form-box .btn-facebook:hover {
+    color: white;
+    background: hsla(221, 40%, 40%, 1);
+}
+
+.form-box .btn-google:hover {
+    color: white;
+    background: hsla(4, 59%, 47%, 1);
+}
+
+.form-box .btn-twitter:hover {
+    color: white;
+    background: hsla(195, 78%, 54%, 1);
+}
+
+/* Food Card Styling */
+body{
+    margin:0;
+    font-family: sans-serif;
+    background: var(--white-color);
+    box-shadow: 0 14px 20px rgba(0, 0, 0, 0.5),
+    0 10 px 10px rgba(0,0,0,0.22);
+}
+h3{
+    text-align: center;
+    font-size: 30px;
+    margin: 0;
+    padding-top: 10px;
+}
+a{
+    text-decoration: none;
+}
+.gallery{
+    display:flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content:center;
+    align-items: center;
+    margin: 50px 0;
+}
+
+.content{
+    width: 20%;
+    margin: 15px;
+    box-sizing: border-box;
+    float: left;
+    text-align: center;
+    border-radius: 20px;
+    cursor: pointer;
+    padding-top: 10px;
+    box-shadow: 0 14px 20px rgba(0, 0, 0, 0.5),
+    0 10 px 10px rgba(0,0,0,0.22);
+    transition: .4s;
+    background: var(--white-color);
+}
+.content:hover{
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
+    0 3px 6px rgba(0, 0, 0, 0.23);
+    transform: translate(0px, -8px);
+
+}
+img{
+    width: 230px;
+    height: auto;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+}
+p{
+    text-align: center;
+    color: #b2bec3;
+    padding-top: 0 8px;
+
+}
+h6{
+    font-size: 26px;
+    text-align: center;
+    color: #222f3e;
+    margin: 0;
+}
+li{
+    padding-top: 5px;
+}
+.fa{
+    font-size: 26px;
+    transition: .4s;
+    
+}
+.fa:hover{
+    transform: scale(1.3);
+    transition: .6s;
+}
+button{
+    text-align: center;
+    font-size: 19px;
+    color: var(--white-color);
+    width: auto;
+    padding: 10px;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    margin-top: 2px;
+    margin-bottom: 2px;
+
+}
+.buy-1{
+    background: var(--primary-color);
+
+}
+
+@media(max-width:1000px){
+    .content{
+        width: 45px;
+    }
+}
+@media(max-width:1000px){
+    .content{
+        width:100%
+    }
+}
+
